ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-application-ingress
spec:
  defaultBackend:
    service:
      name: java-application-service
      port:
        number: 8080
